@@ -1,3 +1,10 @@
+Fri Dec  3 10:27:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSApplication.m: ([-updateWindowsItem:]) modified to show
+	document state image with new menus.
+	* Source/NSMenuView.m: Implement ([-setNeedsDisplayForItemAtIndex:])
+	* Source/NSMenuItemCell.m: Fix so that images are drawn.
+
 Fri Dec  3 05:21:40 1999  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSTableColumn.m ([-setWidth:]): Tiny changing.
